set heigh to auto for program images to stop distortion

--- a/themes/unya/sass/_page-programs.scss
+++ b/themes/unya/sass/_page-programs.scss
@@ -130,11 +130,13 @@
     .wp-post-image {
       position: relative;
       width: 100%;
-      height: 100%;
+      height: auto;
+      min-height: 100%;
 
-      @include desktop {
-        min-height: 100%;
-      }
+      // @include desktop {
+      //   height: auto;
+      //   min-height: 100%;
+      // }
     }
 
     .program-name {
