--- a/themes/unya/style.css
+++ b/themes/unya/style.css
@@ -2538,10 +2538,8 @@ section.opportunities-pre-footer p {
     .programs-list li .wp-post-image {
       position: relative;
       width: 100%;
-      height: 100%; }
-      @media (min-width: 800px) {
-        .programs-list li .wp-post-image {
-          min-height: 100%; } }
+      height: auto;
+      min-height: 100%; }
     .programs-list li .program-name {
       width: 100%;
       color: #FFF;
